--- a/changelog.html
+++ b/changelog.html
@@ -42,6 +42,12 @@
 		<ol>
 			<li>_</li>
 		</ol>
+		<h2>Version 1.4.0, 18.08.2010</h2>
+		<ol>
+			<li>ADD DBPF[X]Property added specific constructor</li>
+			<li>CHANGE DBPFProperty some method names changed</li>
+			<li>CHANGE DBPFDataTypes final variables without DATATYPE_</li>
+		</ol>
 		<h2>Version 1.3.2, 02.04.2010</h2>
 		<ol>
 			<li>UPDATE Some minor updates of readme, resources and build</li>
