--- a/changelog.html
+++ b/changelog.html
@@ -42,6 +42,28 @@
 		<ol>
 			<li>_</li>
 		</ol>
+		<h2>Version 1.5.0, 27.08.2010</h2>
+		<ol>
+			<li>CHANGE DBPFCoder,DBPFConverter,DBPFPackager to package format</li>
+			<li>ADD DBPFUtil2 from DBPF4J-Ext</li>
+			<li>ADD ExemplarProperty, ExemplarProperties replace DBPFProperties</li>
+			<li>ADD DBPFUtil Full support for positive and negative values</li>
+			<li>CHANGE DBPFDataTypes to PropertyType</li>
+			<li>ADD DBPFUtil LOGGER_NAME for logging events</li>
+			<li>CHANGE All DBPFProperty with AbstractDBPFProperty</li>
+			<li>ADD AbstractDBPFProperty</li>
+			<li>CHANGE All DBPFDataType with AbstractDBPFDataType</li>
+			<li>ADD AbstractDBPFDataType implements DBPFType with some more methods</li>
+			<li>ADD DBPFWriter improved error handling</li>
+			<li>ADD DBPFReader improved error handling</li>
+		</ol>
+		<h2>Version 1.4.1, 24.08.2010</h2>
+		<ol>
+			<li>ADD/FIX DBPFCoder Add UINT16 for some methods</li>
+			<li>Change DBPFUtil.toHex to toHexString</li>
+			<li>FIX DBPFCoder.createPropertyT for negative values</li>
+			<li>ADD DBPFUtil.convertHexStringToLong for negative conversation in text property</li>
+		</ol>
 		<h2>Version 1.4.0, 18.08.2010</h2>
 		<ol>
 			<li>ADD DBPF[X]Property added specific constructor</li>
