--- a/changelog.html
+++ b/changelog.html
@@ -42,6 +42,10 @@
 		<ol>
 			<li>_</li>
 		</ol>
+		<h2>Version 1.5.1, 15.09.2010</h2>
+		<ol>
+			<li>FIX DBPFUtil.toValue for only FF as value</li>
+		</ol>
 		<h2>Version 1.5.0, 27.08.2010</h2>
 		<ol>
 			<li>CHANGE DBPFCoder,DBPFConverter,DBPFPackager to package format</li>
