--- a/changelog.html
+++ b/changelog.html
@@ -42,6 +42,15 @@
 		<ol>
 			<li>_</li>
 		</ol>
+		<h2>Version 1.5.4, 13.10.2010, NOT RELEASED</h2>
+		<ol>
+			<li>UPDATE DBPFCoder small improvements</li>
+		</ol>
+		<h2>Version 1.5.3, 13.10.2010</h2>
+		<ol>
+			<li>FIX DBPFUtil2.getTGIValue Workaround for some strange lots</li>
+			<li>FIX DBPFUtil.toValue for only FF as value in Text based coding</li>
+		</ol>
 		<h2>Version 1.5.2, 10.10.2010</h2>
 		<ol>
 			<li>FIX DBPFProperties.getString if Propname for key can not be found in properties.xml</li>
