--- a/changelog.html
+++ b/changelog.html
@@ -42,6 +42,19 @@
 		<ol>
 			<li>_</li>
 		</ol>
+		<h2>Version 1.6.0, 07.01.2011</h2>
+		<ol>
+			<li>ADD DBPFFile.addEntry</li>
+			<li>RENAME ExemplarTypes=>DBPFExemplarTypes, ExemplarProperties=>DBPFPropertyManager,
+			ExemplarProperty=>DBPFProperties,PropertyTypes=>DBPFPropertyTypes</li>
+			<li>FIX ExemplarTypes.CONSTRUCTION</li>
+			<li>ADD DBPFLists</li>
+			<li>UPDATE Vector replaced with ArrayList, StringBuffer with StringBuilder
+			and much more redesign with TGIKey</li>
+			<li>ADD TGIKey, TGIKeys, DBPFContainer</li>
+			<li>REMOVE ArrayInputStream, ArrayOutputStream, DBPFEntries, DBPFTypes, 
+			DBPFProperties</li>
+		</ol>
 		<h2>Version 1.5.4, 13.10.2010, NOT RELEASED</h2>
 		<ol>
 			<li>UPDATE DBPFCoder small improvements</li>
