--- a/changelog.html
+++ b/changelog.html
@@ -39,8 +39,9 @@
 			<li>JAVA 6</li>
 			<li>For JUnitTests: JUnit4; XTools</li>
 		</ol>
-		<h2>Version 2.0.0, 09.12.2012</h2>
+		<h2>Version 2.0.0, 14.12.2012</h2>
 		<ol>
+			<li>FIX DBPFWriter.writeCollection always returns false for writing</li>
 			<li>ADD Method throws DBPFException instead of return NULL or false</li>
 			<li>REDESIGN of whole package</li>
 			<li>REMOVE DBPFUtil.printData</li>
